removed all allocations and replaced with arrays. Enabled all optimizations and added multi-threading